data/Java/09-use-undeclared-variable/6/[M]Error.txt
*https://www.geeksforgeeks.org/new-operator-java/
Test.java:20: error: cannot find symbol
        b1 = new Box();
        ^